site/public/css/stanzr.scss
 
$len:   30px;
$lenb:  20px;
$lenm:  15px;
$lens:  10px;
$lent:   5px;

$len2: 2 * $len;

$headC: #39c;
$linkC: #268cbf;
$footC: #999;
$locolC: #fff;
$hicolC: #f7efe1;
$navbgC: #666;
$bodybgC: #ccc;
$modalbgC: #e6e6e6;
$topicheadbgC: #d1cabf;

$fontbodyC: #404040;
$fontmetaC: #999;
$fontsideC: #666;
$fontnavC:  #fff;


@mixin sidecont() {
  padding: $lens $lenm;
  border-bottom: 1px solid #e2e2e2;
}

@mixin box-round {
  -moz-border-radius: 4px; /* FF1+ */
  -webkit-border-radius: 4px; /* Saf3-4, iOS 1+, Android 1.5+ */
  border-radius: 4px; /* Opera 10.5, IE9, Saf5, Chrome, FF4 */
          
  /* useful if you don't want a bg color from leaking outside the border: */        
  -moz-background-clip: padding; 
  -webkit-background-clip: padding-box; 
  background-clip: padding-box; 
}

@mixin box-round-left($size) {
  -moz-border-top-left-radius: $size;
  -webkit-border-top-left-radius: $size;
  border-top-left-radius: $size;

  -moz-border-bottom-left-radius: $size;
  -webkit-border-bottom-left-radius: $size;
  border-bottom-left-radius: $size;
}

@mixin box-round-right($size) {
  -moz-border-top-right-radius: $size;
  -webkit-border-top-right-radius: $size;
  border-top-right-radius: $size;

  -moz-border-bottom-right-radius: $size;
  -webkit-border-bottom-right-radius: $size;
  border-bottom-right-radius: $size;
}

@mixin modalshadow {
  -moz-box-shadow: 0px 1px 3px #666; 
  -webkit-box-shadow: 0px 1px 3px #666;
  box-shadow: 0px 1px 3px #666; 
}

@mixin messageshadow {
  -moz-box-shadow: 0px 1px 3px #bfbfbf; 
  -webkit-box-shadow: 0px 1px 3px #bfbfbf;
  box-shadow: 0px 1px 3px #bfbfbf; 
}

@mixin clearfix {
  display: inline-block;
  &:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
  }
  * html & { height: 1px }
}

a {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }

  &.textbtn {
    color: $linkC;
    font-weight: bold;
  }

  &.imgbtn {
     display: inline-block;
     width:  $lenm;
     height: $lenm;

     &.sprite-drilldown, &.sprite-drillup, &.sprite-page-backward, &.sprite-page-forward, &.sprite-page-backward-fill {
       width:  22px;
       height: 22px;
     }

     &:hover {
       text-decoration: none;
     }
  }
}


body {
  font-size: 13px;
  color: $fontbodyC;
  background-color: $bodybgC;
  line-height: 1.3;
  height: 100%;
}

h1 {
  font-weight: bold;
  font-size: 24px;
  color: $fontbodyC;
  margin: $lent 0px;
}


h2 {
  font-weight: bold;
  font-size: 15px;
  color: $fontbodyC;
  margin: 0px;
}


h3 {
  font-weight: bold;
  font-size: 15px;
  color: $fontbodyC;
  margin: 0 0 5px;
}

h4 {
  font-size: 13px;
  font-weight: bold;
  margin: 0px;
}

p { 
  margin: 0 0 1em 0;
}

input {
  font-size: 13px;
  padding: 2px;
}


.content, .container {
  width: 980px;
  margin: 0 auto;
}

div {
  &.container {
    height: 100%;
  }

  &.header {
    background-color: $headC;
    height: $len2;
    width: 980px; 

    h1 {
      color: #fff;
      padding: $lenm;
      float:left;
    }
  }

  ul.topnav {
    float: right;
    list-style-type: none;
    margin: $lenb $lent;

    &.popup {
      float: none;
      padding: 0px;
      margin: $lenb 0px;
      li {
        margin: 0px;
      }
    }

    li {
      padding: 0px;
      display: inline;

      a {
        padding: 5px 7px;
        background-color: $navbgC;
        color: $fontnavC;
        text-decoration: none;
      }

      &.navgroup {
        margin: 0px 1px 0px -5px;
        a {
          border-left: 1px solid #999;
        }
      }        

      &.navgroup-left {
        margin: 0px 1px 0px 5px;
        a.first { @include box-round-left(4px); }
        a.last { @include box-round-right(4px); }
        a {
          margin-right: -5px;
        }
      }        

      &.navgroup-right {
        margin: 0px 1px 0px -5px;
        a { 
          border-left: 1px solid #999;
          @include box-round-right(4px); 
        }
      }        

      &.navgroup-alone {
        margin: 0px 1px 0px 5px;
        a {
          @include box-round-left(4px);
          @include box-round-right(4px);
        }
      }        
    }
  }


  &.leftcol {
    background-color: $locolC;
    margin-right: 0px;
    width: 265px;
    float: left;
    overflow: auto;

    h1,h2,h3 {
      color: $fontsideC;
    }

    > div {
      @include sidecont();
    }
    .chat_description {
      color: #666;
    }
  }


  &.midcol {
    background-color: $hicolC;
    margin-right: 0px;
    width: 450px;
    float: left;

    &>div {
      padding: 10px
    }

    div.topichead {
      background-color: $topicheadbgC;
      padding: 10px;
      
      h4 {width: 375px; float: left;}

      p.rally_topicdesc {
        margin: 0px;
      }

      div.rally_gotoactive {
        @include box-round;
        display: none;
        background-color: #575450;
        clear:both;
        color: white;
        margin-top: 5px;
        padding: 5px;

        p {
          margin: 0px;
          &.left {
            float: left;
            width: 180px;
          }
          &.right {
            float: right;
            width: 30px;
          }
        }
      }

      div.rally_makeactive {
        display: none;
        clear:both;
        margin-top: 5px;
      }

      div.navbox {
        width: 50px;
        float: right;
      }
    }

    div.postsarea {
      overflow: auto;

      #posts_tm { 
        display: none; 
      }

      ul.topicposts {
        list-style-type: none;
        margin: 0px;
        padding: 0px;
    
        li.message {
          @include messageshadow;
          margin: 0 0 3px 0;
          padding: 5px;
          background-color: #fff;
          
          div.post_avatar {
            width: 32px;
            float: left;
          }

          div.post_content {
            width: 340px;
            float: left;
            margin-left: 10px;
            
            h4 {float: left;}
            
            .post_actions {float: right;}
          }

          span.count {
            color: $fontmetaC;
          }    

        }

        li.infomsg {
          margin: $lens 0px;
                      
          p {
            color: $fontmetaC;
            margin: 0px;
            padding: 0px;
          }
        }
      }
    }

    div.topicsend {
      display: none;
      padding: 0px 5px 5px 10px;

      #post_text {
        border: 1px solid #999;
        font-size: 13px;
        background-color: #fff;
        width: 370px;
        padding: 2px;
      }

      div.tweetout {
        color: $fontmetaC;
      }
    }
  }


  &.rightcol {
    background-color: $locolC;
    width: 265px;
    float: left;
    overflow: auto;

    div.sidesection {
      @include sidecont();
      height: 140px;
      overflow: hidden;

      h2 {float: left;}
      .sidenav {float: right;}

      &#rally_miniavatars {
        border: none;
      }

      div.miniavatar {
        width: 32px;
        height: 32px;
        float: left;
        margin: 0px 8px 8px 0px !important;
        padding: 0px;
        border: none;
      }
      

      ul.sideposts {
        list-style-type: none;
        margin: 0px;
        padding: 0px;
    
        li {
          margin: 8px 0 8px 0;
          
          h4 {
            display: inline-block;
            margin: 0px !important;
            width: 70%;
          }

          span.count {
            float: right;
            color: $fontmetaC;
          }    
        }
      }
    }
  }
}

p {
  &.post {
    margin: 0px;
    clear: both;
  }

}


div.modalbox {
  @include modalshadow;
/*   background-color: $modalbgC; */
  background-repeat: repeat-x repeat-y;
  background-image: url(/img/background_noise.png);
  padding: 20px;
  display: none;
  position: absolute;
  top: 100px;
  margin: auto;
  width: 200px;            

  div.modal_close {
    position: absolute;
    top: 10px;
    right:5px;
    font-size: 30px;
    padding: 1px 2px;
    line-height: 0;
    a {text-decoration: none; color: $fontmetaC;}
  }
  
  label {display: block; clear: both; margin: 10px 0 0 0; font-weight: bold;}

}

#login_box {
/*   height: 250px; */
}

#signup_box {
/*   height: 350px; */
}

.auth_vertlist {
  margin: 10px 0 25px 0;
  
  div {margin-bottom: 10px;}
}
.auth_img {
  padding: 5px 7px;
}

#hostchat_box {
/*   height: 500px; */
  width: 250px;

  input {
    width: 200px;
  }
  textarea {
    width: 195px;
    height: 30px;
  }

  #hostchat_topiclist {
    overflow: auto;
    height: 400px;
    list-style-type: none;
    margin: 0px;
    padding: 0px;

    li {
      margin: 5px 0px 0px 0px;
    }
  }

  #hostchat_backbtn {margin: 0 0 15px 0;}
  #hostchat_addremove {margin: 0 0 15px 0;}

  #hostchat_topicitem_tm {
    display: none;
  }
}

#profile_box {
  height: 100px;
}



#chat_logo {
  margin-top: 10px;
  text-align: center;
  img {
    display: none;
    border: none;  
  }
}


#avatar_drillup {
  display: none;
}
#agree_drillup {
  display: none;
}
#reply_drillup {
  display: none;
}

#miniavatar_tm {
   display: none;
}


#topicheads {
  padding: 0px;
}

#topichead_tm {
  display: none;
}

#topicposts_tm {
  display: none;
}

#welcome {
  display: none;
}

#hostyourown {
  display: none;
}

#rally_desc {
  padding: 0px;
}

#rally_editbtn {
  display:none;
}

#agree_msg_tm {
  display: none;                    
}

#reply_msg_tm {
  display: none;                    
}



#head_nick_img {
  background-position: 7px -746px; 
  margin-right: -5px;
  width: 40px;
}

#head_linkedin {
  background-position: 7px -390px; 
}

#head_twitter {
  background-position: 7px -963px;
}

#head_facebook {
  background-position: 7px -255px;
}


/* LANDING PAGE */
* html .landing {height: 100%} /* IE6 hack */
html, body {height: 100%; }
.landing {background-color: $headC; min-height: 100%;}
.coming_soon {margin: 0 auto; padding-top: 200px; width: 315px;}
.coming_soon img {display: block;}
.coming_soon h1 {font-size: 21px; margin: 25px 0 10px 0; border-top: 1px solid #fff; padding-top: 25px; color: #fff;}
.coming_soon .textfield {width: 250px; margin: 0 0 5px 0;}
.coming_soon input[type="submit"] {font-size: 17px;}

